--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,13 @@
-* {
-    font-family: 'Helvetica Nue', 'Helvetica', 'Arial', sans-serif;
+a {
+    color: #a9714b;
 }
 
-* a {
-    color: #a9714b;
+a:hover {
+    color: #262a10;
+}
+
+* {
+    font-family: 'Helvetica Nue', 'Helvetica', 'Arial', sans-serif;
 }
 
 /* body */
@@ -19,6 +23,7 @@ body {
     text-emphasis: 900;
 }
 
+/* header h1 */
 #header h1 {
     font-weight: 900;
 }
@@ -35,13 +40,13 @@ p {
     text-align: justify;
 }
 
+/* img in "images" section */
 #images img {
     display: block;
     width: 75%;
     height: auto;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 /* top rides section imgs */
@@ -58,7 +63,7 @@ nav {
 }
 
 /* nav links */ 
-nav a {
+.navbar a {
     color: white;
     padding: 12px 24px;
     font-size: 2em;
@@ -66,6 +71,7 @@ nav a {
     text-align: center;
 }
 
+/* navigation list items */
 nav li {
     display: inline;
     margin-right: 1rem;
@@ -73,7 +79,7 @@ nav li {
 
 
 /* navbar link hover */
-nav a:hover {
+.navbar a:hover {
     background-color: #ad8350;
     color: #262a10;
     text-decoration: none;
@@ -82,23 +88,26 @@ nav a:hover {
 /* container*/
 .container {
     background-color: #f8f9fa;
-    width: 90%;
+    width: 95%;
     padding: 30px;
     font-size: 1.3em;
     box-shadow: 5px 5px 5px 5px;
 }
 
+/* h2 element in .container */
 .container h2 {
     font-size: 2em;
     text-align: center;
     font-weight: bold;
 }
 
+/* ciation for images */
 .img-citation {
     font-size: .75em;
     text-align: center;
 }
 
+/* home page rides section */
 #rides {
     margin-top: 50px;
 }
@@ -107,4 +116,51 @@ nav a:hover {
     width: 100%;
   }
 
-  
+/* about me - img */
+#about img {
+    display: block;
+    width: 75%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+
+/* bike setup section*/
+#setup {
+    margin-top: 50px;
+}
+
+/* bike setup image */
+#bike-setup img {
+    display: block;
+    width: 75%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 75%;
+        box-shadow: 2.5px 2.5px 2.5px 2.5px;
+    }
+}
+
+@media (min-width: 992px) {
+    .container{
+        max-width: 60%
+    }
+}
+
+@media (min-width: 1200px) {
+    .container{
+        max-width: 70%;
+    }
+}
+
+footer {
+    margin-top: 20px;
+}
