--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ body {
     background-image: url("../images/backgrounds/topography.png");
 }
 
+.body-dark {
+    background-image: url("../images/backgrounds/topography_dark.png");
+}
+
 /* header */
 #header {
     text-align: center;
@@ -51,13 +55,16 @@ p {
 
 /* top rides section imgs */
 #top-rides img {
-    width: 30%;
+    display: block;
+    width: 40%;
     height:auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* nav bar */
 nav {
-    background-color: #2a3b13;
+    background-color: #13300f;
     position: fixed;
     overflow: hidden;
 
@@ -81,17 +88,17 @@ nav li {
 
 /* navbar link hover */
 .navbar a:hover {
-    background-color: #ad8350;
-    color: #262a10;
+    background-color: #966529;
+    color: #13300f;
     text-decoration: none;
 }
 
 /* container*/
 .container {
-    background-color: #f8f9fa;
+    background-color: #fcfcfc;
     width: 95%;
     padding: 30px;
-    font-size: 1.3em;
+    font-size: 1.5em;
     box-shadow: 5px 5px 5px 5px;
 }
 
@@ -119,20 +126,22 @@ nav li {
 
 @media (min-width: 768px) {
     .container {
-        max-width: 75%;
+        max-width: 97%;
         box-shadow: 2.5px 2.5px 2.5px 2.5px;
     }
 }
 
 @media (min-width: 992px) {
     .container{
-        max-width: 60%
+        font-size: 1.4rem;
+        max-width: 95%
     }
 }
 
 @media (min-width: 1200px) {
     .container{
-        max-width: 70%;
+        font-size: 1.3rem;
+        max-width: 90%;
     }
 }
 
