--- a/trails/trails.css
+++ b/trails/trails.css
@@ -42,6 +42,44 @@ iframe {
     margin-right: auto;
 }
 
+/* weather container */
+#weather {
+    margin-top:35px;
+}
+
+/* weather input elements */
+#weather input {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1em;
+}
+
+/* weather city name */
+#weather .city-name {
+    padding-top: 10px;
+}
+
+/* weather text */
+#weather p {
+    text-align: center;
+}
+
+/* weather submit button */
+#weather .submit-button {
+    margin-bottom: 0.5em;
+}
+
+/* weather input field */
+#weather .inputValue {
+ width: 65%;
+}
+
+/* weather description */
+#weather .desc {
+    text-transform: capitalize;
+}
+
 @media (min-width: 768px) {
     .container {
         max-width: 80%;
